# poly-gambling

./: Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
btc_bot/: main.py
btc_bot/config/: settings.yaml
btc_bot/execution/: paper_broker.py  performance.py
btc_bot/features/: cache.py  engineer.py
btc_bot/ingestion/: candle_fetcher.py  normaliser.py  scheduler.py
btc_bot/storage/: README.md  database.py  dev.db  models.py
btc_bot/storage/migrations/: env.py
btc_bot/storage/migrations/versions/: 0001_initial.py
btc_bot/strategy/: base_model.py  moving_average.py  position_sizer.py  random_model.py  signal_generator.py
