[project]
name = "btc-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["btc_bot"]
